Fixed the misaligned form element

--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
         </div>
         <form class="row m-t-10" ng-submit="zipEntered()" ng-show="isSearchFormShown">
           <div class="col-xs-12 col-sm-4">
-          <div class="form-group">
-            <input id="zipcode" ng-model="zip" placeholder="Enter the ZIP code" type="text" pattern="\d{5,5}" title="Please enter a valid ZIP code" class="form-control">
+            <div class="form-group">
+              <input id="zipcode" ng-model="zip" placeholder="Enter the ZIP code" type="text" pattern="\d{5,5}" title="Please enter a valid ZIP code" class="form-control">
+            </div>
+            <div class="m-t-5"><button class="btn btn-primary" type="submit">Search</button></div>
           </div>
-          <div class="m-t-5"><button class="btn btn-primary" type="submit">Search</button></div>
         </form>
       </div>
 
@@ -58,7 +59,6 @@
         <h1>Getting weather information <i class="fa fa-spinner fa-spin"></i></h1>
       </div>
 
-      </form>
     </script>
 
   </body>
